terraform/modules/vpc/igw.tf
resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "devops-igw"
  }
}
